# eks-version-exporter

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yaml  pipeline.sh
k8s/: deployment.yml  service.yml  servicemonitor.yml
src/: main.rs  model.rs
