[package]
name = "eks-version-exporter"
version = "0.1.0"
authors = ["Emil H. Clausen <sequoiia@hummel.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
serde-xml-rs = "0.4.0"
reqwest = {version = "^0.11", features = ["blocking"]}
semver = "^0.9"
prometheus_exporter = "0.6.2"
chrono = "^0.4"
pretty_env_logger = "0.5.0"
log = "^0.4"
regex = "^1"